--- a/index.html
+++ b/index.html
@@ -8,7 +8,76 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- your code here -->
+  <nav id="top" class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Nicholas MacDonald</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>  
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm my-3">
+        <h3>About Me</h3>
+        <p>My name is Nicholas MacDonald, and I live in Gainesville, Florida! I have a background in game design, and I recently graduated with a Bachelor of Arts in Digital Arts and Sciences. I'm excited to learn new coding languages and all the things that go into web design. That is literally why I am pursuing this Master's degree.
+          I enjoy watching television, drawing, writing, taking walks, and eating. I also greatly enjoy making and playing video and tabletop games. My most recently finished tabletop game includes a version of Mafia that can be played with up to around 200 players. As far as video games go, I am looking into modding Inscryption, and I am also trying to learn the use of websockets, so I can make party games similar to those made by Jackbox.          
+          I feel like getting a degree in Web Design will serve to hit two birds with one stone: It will give me a more reliable, primary source of income as well as the skills I need to make a site that will put my foot in the game industry's door.  
+          </p>
+      </div>
+      <div class="col-sm my-3">
+        <h3>Hobbies</h3>
+        <ul>
+          <li>Watching Television</li>
+          <li>Drawing</li>
+          <li>Writing</li>
+          <li>Taking Walks</li>
+          <li>Eating</li>
+          <li>Making/Playing Tabletop/Video Games</li>
+        </ul>
+      </div>
+      <div class="col-sm my-3">
+        <h3>Interests</h3>
+        <ul>
+          <li>Game Design</li>
+          <li>Coding</li>
+          <li>Art</li>
+        </ul>
+      </div>
+      <div class="col-sm my-3">
+        <h3>Career Goals</h3>
+        <ol>
+          <li>Become a successful game developer and enjoy life.</li>
+          <li>Become a successful web developer so I can do something I enjoy. Not starving when games don't produce income would also be nice.</li>
+        </ol>
+      </div>
+    </div>
+    <div class="container">
+      <div class="card-group">
+        <div class="card text-center" style="width: 18rem;">
+            <div class="card-body my-3">
+              <h5 class="card-title">Contact Me</h5>
+              <p class="card-text">Phone: (123)-456-7890</p>
+              <p class="card-text">Email: thisismyemail@email.com</p>
+            </div>
+        </div>
+      </div>
+      <a class="btn btn-dark position-absolute start-50 translate-middle my-3" href="#top">Go to top</a>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
